// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/avatar/demo/basic.md correctly 1`] = `
<div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-circle ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-sm ant-avatar-circle ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-lg ant-avatar-square ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-square ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-sm ant-avatar-square ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`renders ./components/avatar/demo/dynamic.md correctly 1`] = `
<div>
  <span
    class="ant-avatar ant-avatar-lg ant-avatar-circle"
    style="background-color:#f56a00;"
  >
    <span
      class="ant-avatar-string"
    >
      U
    </span>
  </span>
  <button
    class="ant-btn ant-btn-sm"
    style="margin-left:16px;"
    type="button"
  >
    <span>
      Change
    </span>
  </button>
</div>
`;

exports[`renders ./components/avatar/demo/type.md correctly 1`] = `
<div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-circle"
      >
        <span
          class="ant-avatar-string"
        >
          U
        </span>
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-circle"
      >
        <span
          class="ant-avatar-string"
        >
          USER
        </span>
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-image"
      >
        <img
          src="https://os.alipayobjects.com/rmsportal/mgesTPFxodmIwpi.png"
        />
      </span>
    </div>
  </div>
  <div
    class="ant-row"
  >
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-circle"
        style="color:#f56a00;background-color:#fde3cf;"
      >
        <span
          class="ant-avatar-string"
        >
          U
        </span>
      </span>
    </div>
    <div
      class="ant-col-4"
    >
      <span
        class="ant-avatar ant-avatar-circle ant-avatar-icon"
        style="background-color:#87d068;"
      >
        <i
          class="anticon anticon-user"
        />
      </span>
    </div>
  </div>
</div>
`;
